// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarPanel prop: type=date 1`] = `
<div
  class="mx-calendar mx-calendar-panel-date"
>
  <div
    class="mx-calendar-header"
  >
    <button
      class="mx-btn mx-btn-text mx-btn-icon-double-left"
    >
      <i
        class="mx-icon-double-left"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-left"
    >
      <i
        class="mx-icon-left"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-double-right"
    >
      <i
        class="mx-icon-double-right"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-right"
    >
      <i
        class="mx-icon-right"
      />
    </button>

    <span
      class="mx-calendar-header-label"
    >
      <button
        class="mx-btn mx-btn-text mx-btn-current-month"
      >

          Oct

      </button>
      <button
        class="mx-btn mx-btn-text mx-btn-current-year"
      >

          2019

      </button>
    </span>
  </div>

  <div
    class="mx-calendar-content"
  >
    <table-year-stub
      decade="2010"
      getcellclasses="function () { [native code] }"
      style="display: none;"
    />

    <table-month-stub
      getcellclasses="function () { [native code] }"
      style="display: none;"
    />

    <table-date-stub
      calendarmonth="9"
      calendaryear="2019"
      getcellclasses="function () { [native code] }"
      getrowclasses="function () { [native code] }"
      titleformat="YYYY-MM-DD"
    />
  </div>
</div>
`;

exports[`CalendarPanel prop: type=month 1`] = `
<div
  class="mx-calendar mx-calendar-panel-month"
>
  <div
    class="mx-calendar-header"
  >
    <button
      class="mx-btn mx-btn-text mx-btn-icon-double-left"
    >
      <i
        class="mx-icon-double-left"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-left"
      style="display: none;"
    >
      <i
        class="mx-icon-left"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-double-right"
    >
      <i
        class="mx-icon-double-right"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-right"
      style="display: none;"
    >
      <i
        class="mx-icon-right"
      />
    </button>

    <span
      class="mx-calendar-header-label"
    >
      <button
        class="mx-btn mx-btn-text"
      >

        2019

      </button>
    </span>
  </div>

  <div
    class="mx-calendar-content"
  >
    <table-year-stub
      decade="2010"
      getcellclasses="function () { [native code] }"
      style="display: none;"
    />

    <table-month-stub
      getcellclasses="function () { [native code] }"
    />

    <!---->
  </div>
</div>
`;

exports[`CalendarPanel prop: type=year 1`] = `
<div
  class="mx-calendar mx-calendar-panel-year"
>
  <div
    class="mx-calendar-header"
  >
    <button
      class="mx-btn mx-btn-text mx-btn-icon-double-left"
    >
      <i
        class="mx-icon-double-left"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-left"
      style="display: none;"
    >
      <i
        class="mx-icon-left"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-double-right"
    >
      <i
        class="mx-icon-double-right"
      />
    </button>

    <button
      class="mx-btn mx-btn-text mx-btn-icon-right"
      style="display: none;"
    >
      <i
        class="mx-icon-right"
      />
    </button>

    <span
      class="mx-calendar-header-label"
    >
      <span>
        2010
      </span>

      <span
        class="mx-calendar-decade-separator"
      />

      <span>
        2019
      </span>
    </span>
  </div>

  <div
    class="mx-calendar-content"
  >
    <table-year-stub
      decade="2010"
      getcellclasses="function () { [native code] }"
    />

    <!---->

    <!---->
  </div>
</div>
`;
